add GA and tweak copy

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
  <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8781116-16"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-8781116-16');
+    </script>
+  
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -95,6 +105,7 @@
               <div class="intro-img">
                 <img class="img-fluid" src="assets/img/intro-mobile.png" alt="">
               </div>            
+              <a name="intro"></a>
             </div>
           </div> 
         </div> 
@@ -104,7 +115,8 @@
     </header>
     <!-- Header Area wrapper End -->
 
-    <a name="intro"></a>
+
+
     <!-- Intro Section Start -->
     <section id="services" class="section-padding">
       <div class="container">
@@ -145,7 +157,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="#">Track what matters</a></h3>
-                <p>The Rocky OKR tracker lets you track confidence, rationale, and commitments so you can have valuable conversations. </p>
+                <p>The Rocky OKR tracker lets you track confidence, narrative, and commitments so you can have more valuable conversations. </p>
               </div>
             </div>
           </div>
@@ -199,7 +211,7 @@
             <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
               <div>
                 <div class="site-heading">
-                  <p class="mb-3">Built by a coach</p>
+                  <p class="mb-3">Designed from experience</p>
                   <h2 class="section-title">Built by a coach</h2>
                 </div>
                 <div class="content">
@@ -555,7 +567,7 @@
               <div class="widget">
                 <h3 class="footer-logo"><img src="assets/img/logo.svg" style="width: 60px" alt=""></h3>
                 <div class="textwidget">
-                  <p>ROCKY: Simple, OKR tracking for your teams. Currently FREE and by invite only, register now!</p>
+                  <p>ROCKY: Simple, OKR tracking for your teams. Currently FREE and by invitation only. Register   now!</p>
                 </div>
                 <div class="social-icon">
                   <!--a class="facebook" href="#"><i class="lni-facebook-filled"></i></a-->
@@ -585,7 +597,7 @@
               <h3 class="footer-titel">Contact</h3>
               <ul class="address">
                 <li>
-                  <a href="#"><i class="lni-map-marker"></i> Made in London, UK</a>
+                  <a href="#"><i class="lni-map-marker"></i>Made in London, UK</a>
                 </li>
                 <li>
                   <a href="http://www.peterkappus.com/contact"><i class="lni-envelope"></i>Get in touch!</a>
@@ -637,6 +649,5 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
-      
   </body>
 </html>
